# yolov8

./: README.md  pyproject.toml
yolo/: train.ipynb
